--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "server": "node server/index.js"
   },
   "dependencies": {
+    "framer-motion": "^10.0.1",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "framer-motion": "^10.0.1"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
